# idiod

./: Cargo.toml  README.md  build.sh  install.sh  test.py
idiod/: Cargo.toml  idiod.service  idiod.socket  idiod.toml
idiod-apache-logfilter/: Cargo.toml
idiod-apache-logfilter/src/: main.rs
idiod/src/: classifier.rs  config.rs  idiots.rs  main.rs  nftables.rs  systemd.rs  unix_sock.rs
scripts/: lib.sh
