# -*- coding: utf-8 -*-

[package]
name = "idiod-apache-logfilter"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
#categories = [ ]
#keywords = [ ]
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = [ "std", "help", "usage", "error-context", "derive" ] }
regex = { workspace = true }
tokio = { workspace = true, features = [ "rt", "net", "macros", "signal", "sync", "time", "io-std", "io-util", "fs" ] }

# vim: ts=4 sw=4 expandtab
