# -*- coding: utf-8 -*-

[package]
name = "idiod"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
#categories = [ ]
#keywords = [ ]
publish = false

[dependencies]
anyhow = { workspace = true }
arraydeque = { workspace = true }
clap = { workspace = true, features = [ "std", "help", "usage", "error-context", "derive" ] }
libc = { workspace = true }
movavg = { workspace = true, features = [ "fastfloat" ] }
nftables = { workspace = true, features = [ "tokio" ] }
sd-notify = { workspace = true }
tokio = { workspace = true, features = [ "rt-multi-thread", "net", "macros", "signal", "sync", "time" ] }
toml = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }

# vim: ts=4 sw=4 expandtab
